--- a/index.html
+++ b/index.html
@@ -121,42 +121,42 @@
               <source src="images/beach.mp4" type="video/mp4">
             </video>
 
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-block">
+              <h5>Summer is here!</h5>
+              <p> Discover our summer offers</p>
             </div>
 
           </div>
 
           <div class="carousel-item">
             <img src="images/banner1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-block">
+              <h5>Mountains</h5>
+              <p>Explore BC Mountains this summer.</p>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="images/banner2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-block">
+              <h5>Beach Vacation</h5>
+              <p>Check Out our beach themed offers</p>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="images/banner3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-block">
+              <h5>Greece</h5>
+              <p>Discover Greece with our exclusive offers</p>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="images/banner4.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <div class="carousel-caption d-block">
+              <h5>Explore</h5>
+              <p>Explore our favorite destinations</p>
             </div>
           </div>
 
@@ -214,7 +214,7 @@
       </div>
       <div class="categories ">
         <div class="row g-2">
-          <div class="col-5 col-sm-3 col-md-2 col-lg-1">
+          <div class="col-5 col-sm-3 col-md-2">
             <div class="card mb-3">
               <img src="images/adventure.svg" class="card-img-top" alt="...">
               <div class="card-body d-none d-sm-block">
@@ -222,7 +222,7 @@
               </div>
             </div>
           </div>
-          <div class="col-5 col-sm-3 col-md-2 col-lg-1">
+          <div class="col-5 col-sm-3 col-md-2">
             <div class="card mb-3">
               <img src="images/beach.svg" class="card-img-top" alt="...">
               <div class="card-body d-none d-sm-block">
@@ -230,7 +230,7 @@
               </div>
             </div>
           </div>
-          <div class="col-5 col-sm-3 col-md-2 col-lg-1">
+          <div class="col-5 col-sm-3 col-md-2">
             <div class="card mb-3">
               <img src="images/camping.svg" class="card-img-top" alt="...">
               <div class="card-body d-none d-sm-block">
@@ -238,7 +238,7 @@
               </div>
             </div>
           </div>
-          <div class="col-5 col-sm-3 col-md-2 col-lg-1">
+          <div class="col-5 col-sm-3 col-md-2">
             <div class="card mb-3">
               <img src="images/city.svg" class="card-img-top" alt="...">
               <div class="card-body d-none d-sm-block">
@@ -251,13 +251,7 @@
       </div>
     </div>
 
-    <!-- <div class="custom-shape-divider-bottom-1655159955">
-  <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-    <path
-      d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
-      class="shape-fill"></path>
-  </svg>
-</div> -->
+
   </section>
 
 
@@ -278,7 +272,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel1.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -294,7 +288,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel2.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -312,7 +306,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
 
             <img src="images/hotel3.jpg" class="img-fluid" alt="...">
 
@@ -330,7 +324,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel4.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -347,7 +341,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel5.jpg" class="img-fluid" alt="...">
             <div class="card-img-overlay">
               <span class="content-card">
@@ -363,7 +357,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel6.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -379,7 +373,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel7.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -395,7 +389,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel8.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -411,7 +405,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel9.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -427,7 +421,7 @@
 
         <div class="carousel-cell">
 
-          <div class="card bg-dark text-white">
+          <div class="card text-white">
             <img src="images/hotel10.jpg" class="img-fluid" alt="...">
 
             <div class="card-img-overlay">
@@ -464,7 +458,7 @@
             <img src="images/maldives.jpg" class="card-img" alt="...">
             <div class="hotel card-img-overlay">
               <h5 class="card-title">Maldives</h5>
-              <p class="card-text">300$ avg</p>
+              <p class="card-text">300$ avg/ Night</p>
             </div>
           </div>
         </div>
@@ -474,7 +468,7 @@
             <img src="images/thailand.jpg" class="card-img" alt="...">
             <div class="hotel card-img-overlay">
               <h5 class="card-title">Thailand</h5>
-              <p class="card-text">150$ avg</p>
+              <p class="card-text">150$ avg/ Night</p>
             </div>
           </div>
         </div>
@@ -484,7 +478,7 @@
             <img src="images/mexico.jpg" class="card-img" alt="...">
             <div class="hotel card-img-overlay">
               <h5 class="card-title">Mexico</h5>
-              <p class="card-text">230$ avg</p>
+              <p class="card-text">230$ avg/ Night</p>
             </div>
           </div>
         </div>
@@ -493,7 +487,7 @@
             <img src="images/bali.jpg" class="card-img" alt="...">
             <div class="hotel card-img-overlay">
               <h5 class="card-title">Bali</h5>
-              <p class="card-text">240$ avgo</p>
+              <p class="card-text">240$ avg/ Night</p>
             </div>
           </div>
         </div>
@@ -506,6 +500,9 @@
 
   <section class="shop-section">
     <div class="shop-wrapper">
+      <div class="shop-title">
+        <p>Browse by Destination</p>
+      </div>
 
       <div class="shop" id="shop" tabindex="-1">
         <div class="men-category">
@@ -612,6 +609,7 @@
     <!--contact -->
     <div class="copyright">
       <p>2022 Wandero Sample </p>
+      <br>
       <p>Powered by html, css, bootstrap and JavaScript</p>
     </div>
     <!--copyright-->
