glide js file added

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 
 
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+  <script src="glide.js"></script>
   <script src="index.js"></script>
 
 </body>
