--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@
 
       <div class="shop" id="shop" tabindex="-1">
         <div class="men-category">
-          <img src="/images/tokyo2.jpg">
+          <img src="./images/tokyo2.jpg">
           <div class="cat">
             <p>Asia</p>
           </div>
         </div>
 
         <div class="trends-category">
-          <img src="/images/africa2.jpg">
+          <img src="./images/africa2.jpg">
           <div class="cat">
             <p>Africa</p>
           </div>
@@ -521,28 +521,28 @@
         </div>
 
         <div class="glasses-category">
-          <img src="/images/europe.jpg">
+          <img src="./images/europe.jpg">
           <div class="cat">
             <p>europe</p>
           </div>
         </div>
 
         <div class="sales-category">
-          <img src="/images/northamerica.jpg">
+          <img src="./images/northamerica.jpg">
           <div class="cat">
             <p>north america</p>
           </div>
         </div>
 
         <div class="bags-category">
-          <img src="/images/southamerica.jpg">
+          <img src="./images/southamerica.jpg">
           <div class="cat">
             <p>central & south america</p>
           </div>
         </div>
 
         <div class="womens-category">
-          <img src="/images/oz.jpg">
+          <img src="./images/oz.jpg">
           <div class="cat">
             <p>australia & new zealand</p>
           </div>
